# EEGNEW

./: .gitignore  GEMINI.md  README.md  dvc.yaml  mlflow.db  pyproject.toml
.agent/workflows/: git-push.md  summarize-paper.md  update-improvements.md
.dvc/: config
config/: config.yaml
config/data/: colab.yaml  default.yaml
config/hydra/sweeper/: optuna.yaml  optuna_custom.yaml
config/model/: colab.yaml  custom.yaml
config/training/: colab.yaml  default.yaml
docs/: BNCI2014_001.md
docs/papers/: README.md
mlruns/1/5ed6a04af1604ec0ae4f17724c6a69eb/artifacts/: best_model.pt
outputs/: history.csv  metrics.json
outputs/2026-02-03/02-56-12/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-03/03-03-38/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-03/03-25-41/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-03/03-51-58/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-05/05-32-30/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-05/05-58-49/.hydra/: config.yaml  hydra.yaml
references/: README.md
scripts/: download_data.py  preprocess.py  train.py  tune.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  dataset.py  moabb_loader.py  preprocessing.py
src/models/: __init__.py  base.py  custom.py
src/training/: __init__.py  metrics.py  trainer.py
src/utils/: __init__.py  helpers.py
